# argus-backend

./: .clang-format  .env.example  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTEXT.md  Dockerfile  LICENSE  README.md  conanfile.txt  config.json
.zed/: settings.json
database/: schema.sql
scripts/: setup-dev.sh  setup-prod.sh
src/: main.cc
src/config/: app-config.cc  app-config.hxx
src/filter/jwt/: jwt-filter.cc  jwt-filter.hxx
src/filter/valid-json/: valid-json-filter.cc  valid-json-filter.hxx
src/shared/exceptions/: response-exception.hxx
src/shared/services/app-env-context/: app-env-context.cc  app-env-context.hxx
src/shared/services/sqlite/: db-service.cc  db-service.hxx
src/shared/wrapper/api-response/: api-response.cc  api-response.hxx
